--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.4",
     "firebase": "^7.19.0",
+    "firebase-admin": "^9.1.1",
+    "firebase-functions": "^3.11.0",
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-anchor-links": "^1.1.1",
