--- a/functions/package.json
+++ b/functions/package.json
@@ -10,10 +10,11 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "8"
   },
   "main": "index.js",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.4",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
