--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase-admin": "^9.1.1",
     "firebase-functions": "^3.11.0",
     "gatsby": "^2.24.47",
+    "gatsby-cli": "^2.12.97",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-manifest": "^2.4.23",
