--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "babel-jest": "^26.3.0",
     "babel-preset-gatsby": "^0.5.8",
+    "cypress": "^6.2.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
     "prettier": "2.0.5",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "start-server-and-test": "^1.11.7"
   },
   "keywords": [
     "gatsby"
@@ -46,6 +49,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "jest"
+    "test": "jest",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
   }
 }
